# cert-tree.rs

./: AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md  rust_guidelines_full.md
.github/workflows/: release.yml
.kilocode/rules/: git-workflow-automation.md  pragmatic-rust-guidelines.md  rust-guidelines.md  rust-performance-guidelines.md  semver.md
.kilocode/rules/memory-bank/: architecture.md  brief.md  context.md  product.md  tasks.md  tech.md
.kilocode/workflows/: commit-message-generator-with-gitmojis.md  release-process.md  workflow.md
src/: cli.rs  completions.rs  display.rs  error.rs  io.rs  main.rs  models.rs  parser.rs  tree.rs
test/: cert.pem  key.pem
