[package]
name = "cert_tree"
version = "0.10.0"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
x509-parser = "0.15"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
ratatui = "0.26"
crossterm = "0.27"
chrono = "0.4"
rustls = "0.21"
webpki-roots = "0.25"
url = "2.4"

[profile.release]
opt-level = 3
lto = true
