[package]
name = "cert_tree"
version = "0.14.3"
edition = "2021"
license = "MIT"
license-file = "LICENSE"
description = "A command-line utility written in Rust for inspecting and displaying X.509 certificates in a human-readable tree format"
authors = ["Tadas"]
homepage = "https://github.com/tadas/cert-tree.rs"
repository = "https://github.com/tadas/cert-tree.rs"
readme = "README.md"
keywords = ["certificate", "x509", "cli", "security", "tls"]
categories = ["command-line-utilities", "development-tools"]
[package.metadata.rpm]
description = "A command-line utility written in Rust for inspecting and displaying X.509 certificates in a human-readable tree format"
summary = "Command-line X.509 certificate inspector"
license = "MIT"
url = "https://github.com/tadas/cert-tree.rs"
source = "https://github.com/tadas/cert-tree.rs/archive/v%{version}.tar.gz"
docs = "https://github.com/tadas/cert-tree.rs"
changelog = "https://github.com/tadas/cert-tree.rs/blob/main/CHANGELOG.md"
buildarch = "x86_64"
targets = { cert_tree = { path = "/usr/bin/cert_tree" } }

[dependencies]
clap = { version = "4.0", features = ["derive"] }
x509-parser = "0.15"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
ratatui = "0.26"
crossterm = "0.27"
chrono = "0.4"
rustls = "0.21"
webpki-roots = "0.25"
url = "2.4"

[profile.release]
opt-level = 3
lto = true
