[package]
name = "cert-tree"
version = "0.14.7"
edition = "2021"
license = "MIT"
description = "A command-line utility written in Rust for inspecting and displaying X.509 certificates in a human-readable tree format"
authors = ["Tadas Lotužas <tdslot@gmail.com>"]
homepage = "https://github.com/tdslot/cert-tree.rs"
repository = "https://github.com/tdslot/cert-tree.rs"
readme = "README.md"
keywords = ["certificate", "x509", "cli", "security", "tls"]
categories = ["command-line-utilities", "development-tools"]
[package.metadata.generate-rpm]
assets = [
  { source = "target/release/cert-tree", dest = "/usr/bin/cert-tree", mode = "755" },
]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
x509-parser = "0.15"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
ratatui = "0.26"
crossterm = "0.27"
chrono = "0.4"
rustls = "0.21"
webpki-roots = "0.25"
url = "2.4"
mimalloc = { version = "0.1", default-features = false }
[lints.clippy]
# Enable additional Clippy lints for better code quality
pedantic = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# Specific lints to enable
missing_docs_in_private_items = "warn"
unnecessary_unwrap = "warn"
unused_self = "warn"
implicit_clone = "warn"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
